MonetDB/src/mal/Tests/tst302.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
##propagate INT exception
## (you should be able to pass it upwards though)
#	IllegalAccess := 1234;
#	raise IllegalAccess;
#	print("should not come here\n");
#
function Admin.main():int;	#0:(main:int)
	IllegalAccess := 1234;	#1:(IllegalAccess:int)<-($2:int)
	raise IllegalAccess;	#2:(IllegalAccess:int)
	io.print("should not come here\n");	#3:($3:int)<-($4:str)
end function;	#4:
!ERROR: IllegalAccess:Admin.main[2]:raise exception

MALexception:Admin.main[4]:propagated
>